--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@ title: Blog
 ---
 <h1>Latest Posts</h1>
 
-<ul>
+<ul class="blog_posts">
     {% for post in site.posts %}
     <li>
         <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
