--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@ title: Home
     <title>{{ page.title }}</title>
 </head>
 <body>
-<h1>{{ "Hello World!" | downcase }}</h1>
+<ul class="blog-posts">
+    <h1>지난 포스트들</h1>
+
+    {% for post in site.posts %}
+    <li>
+        <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+        <p>{{ post.excerpt }}</p>
+    </li>
+    {% endfor %}
+</ul>
 </body>
 </html>
