--- a/index.html
+++ b/index.html
@@ -8,15 +8,34 @@ title: Home
     <title>{{ page.title }}</title>
 </head>
 <body>
-<ul class="blog-posts">
-    <h1>지난 포스트들</h1>
-
-    {% for post in site.posts %}
-    <li>
-        <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
-        <p>{{ post.excerpt }}</p>
-    </li>
-    {% endfor %}
-</ul>
 </body>
+<div class="pages-wrapper">
+    {% for post in paginator.posts %}
+    <div class="pt-5">
+        <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
+
+        <p class="author">
+            <span class="date">{{ post.date }}</span>
+        </p>
+        <p>{{ post.excerpt }}</p>
+        {% endfor %}
+    </div>
+    <div class="page-footer">
+        {% if paginator.previous_page %}
+        <a href="{{ paginator.previous_page_path }}" class="previous">
+            Previous
+        </a>
+        {% else %}
+        <span class="previous">Previous</span>
+        {% endif %}
+        <span class="page_number ">
+    Page: {{ paginator.page }} of {{ paginator.total_pages }}
+  </span>
+        {% if paginator.next_page %}
+        <a href="{{ paginator.next_page_path }}" class="next">Next</a>
+        {% else %}
+        <span class="next ">Next</span>
+        {% endif %}
+    </div>
+</div>
 </html>
