--- a/index.html
+++ b/index.html
@@ -10,32 +10,8 @@ title: Home
 <body>
 </body>
 <div class="pages-wrapper">
-    {% for post in paginator.posts %}
-    <div class="pt-5">
-        <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
+    {%include pageIterator.html%}
+    {% include pagination.html %}
 
-        <p class="author">
-            <span class="date">{{ post.date }}</span>
-        </p>
-        <p>{{ post.excerpt }}</p>
-        {% endfor %}
-    </div>
-    <div class="page-footer">
-        {% if paginator.previous_page %}
-        <a href="{{ paginator.previous_page_path }}" class="previous">
-            Previous
-        </a>
-        {% else %}
-        <span class="previous">Previous</span>
-        {% endif %}
-        <span class="page_number ">
-    Page: {{ paginator.page }} of {{ paginator.total_pages }}
-  </span>
-        {% if paginator.next_page %}
-        <a href="{{ paginator.next_page_path }}" class="next">Next</a>
-        {% else %}
-        <span class="next ">Next</span>
-        {% endif %}
-    </div>
 </div>
 </html>
