[CREATE]: IC html 생성 IC는 image convert합니다. IC는 jpeg, png 등의 이미지 파일을 webp로 변경합니다

--- a/ic.html
+++ b/ic.html
@@ -4,7 +4,16 @@ title: convert image to webp
 ---
 
 <div>
-  <h1>Convert image to webp format</h1>
+  <h1 data-i18n>Convert image to webp</h1>
+  <br />
+  <section>
+    <ol>
+      <li>choose image files like jpeg, png something</li>
+      <li>click to download</li>
+      <li>done!</li>
+    </ol>
+  </section>
+  <br />
   <div>
     <input
       type="file"
@@ -24,14 +33,14 @@ title: convert image to webp
     <li>
       <div>
         <h3 data-i18n>before 👇</h3>
-        <div id="before-size">size:</div>
+        <div id="before-size" data-i18n>size:</div>
       </div>
       <canvas id="webp-canvas"></canvas>
     </li>
     <li>
       <div>
         <h3 data-i18n>after: click to download👇</h3>
-        <div id="after-size">size:</div>
+        <div id="after-size" data-i18n>size:</div>
         <a id="download-here"></a>
       </div>
     </li>
@@ -44,7 +53,8 @@ title: convert image to webp
     ["CLEAR ALL", "초기화"],
     ["before 👇", "변경전"],
     ["after: click to download👇", "변경후: 아래의 이미지 클릭시 다운로드 👇"],
-    ["Convert image to webp format", "이미지를 webp 형식으로 변경합니다."],
+    ["Convert image to webp", "이미지를 webp 형식으로 변경합니다."],
+    ["size:", "크기:"],
   ]);
 
   const replaceText = (el) => {
