[CREATE]: IC html 생성 IC는 image convert합니다. IC는 jpeg, png 등의 이미지 파일을 webp로 변경합니다

--- a/ic.html
+++ b/ic.html
@@ -8,9 +8,9 @@ title: convert image to webp
   <br />
   <section>
     <ol>
-      <li>choose image files like jpeg, png something</li>
-      <li>click to download</li>
-      <li>done!</li>
+      <li data-i18n>choose image files like jpeg, png something</li>
+      <li data-i18n>click to download webp file</li>
+      <li data-i18n>done!</li>
     </ol>
   </section>
   <br />
@@ -55,6 +55,15 @@ title: convert image to webp
     ["after: click to download👇", "변경후: 아래의 이미지 클릭시 다운로드 👇"],
     ["Convert image to webp", "이미지를 webp 형식으로 변경합니다."],
     ["size:", "크기:"],
+    [
+      "choose image files like jpeg, png something",
+      "webp로 변경하고 싶은 사진 파일 혹은 파일들을 선택하세요",
+    ],
+    [
+      "click to download webp file",
+      "클릭하여 webp 파일을 다운로드 받을 수 있습니다.",
+    ],
+    ["done!", "끝입니다!"],
   ]);
 
   const replaceText = (el) => {
