[CREATE]: katex 추가 및 수학학post추가

--- a/categories.html
+++ b/categories.html
@@ -3,10 +3,12 @@ title: Category
 ---
 
 {% for category in site.categories %}
+{% if category[0] == "math" or category[0] == "algorithm" %}
 <h3>{{ category[0] }}</h3>
 <ul>
-    {% for post in category[1] %}
+    {% for post in category[1] limit:10 %}
     <li><a href="{{ post.url }}">{{ post.title }}</a></li>
     {% endfor %}
 </ul>
+{% endif %}
 {% endfor %}
