[TEST]: vue with ESM

--- a/app.html
+++ b/app.html
@@ -4,22 +4,17 @@
         "vue": "https://unpkg.com/vue@3/dist/vue.esm-browser.js"
       }
     }
-  </script>
+</script>
   
-  <div id="app">
-    {{ message }}
-    {{ hello }}
-</div>
+<div id="app"></div>
   
-  <script type="module">
-    import { createApp } from 'vue'
+<script type="module">
+
+</script>
+
+<script type="module">
+    import { createApp } from 'vue';
+    import Test from './assets/js/vue/test.js';
   
-    createApp({
-      data() {
-        return {
-          message: '안녕 Vue!',
-          hello:"hello"
-        }
-      }
-    }).mount('#app')
-  </script>
+    createApp(Test).mount('#app')
+</script>
