deploy: 7a7349cb03f6c4c003d459cd0a604e64267a0117

--- a/404.html
+++ b/404.html
@@ -5,8 +5,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>log4zerozoo-a</title>
 		<meta name="description" content="not to day">
-		<link rel="alternate" href="/zerozoo-a.github.io/feed/feed.xml" type="application/atom+xml" title="log4zerozoo-a">
-		<link rel="alternate" href="/zerozoo-a.github.io/feed/feed.json" type="application/json" title="log4zerozoo-a">
+		<link rel="alternate" href="/blog/feed/feed.xml" type="application/atom+xml" title="log4zerozoo-a">
+		<link rel="alternate" href="/blog/feed/feed.json" type="application/json" title="log4zerozoo-a">
 		
 		<style>/* Message Box */
 .message-box {
@@ -302,13 +302,13 @@ h2 + .header-anchor {
 		<a href="#skip" class="visually-hidden">Skip to main content</a>
 
 		<header>
-			<a href="/zerozoo-a.github.io/" class="home-link">log4zerozoo-a</a>
+			<a href="/blog/" class="home-link">log4zerozoo-a</a>
 			<nav>
 				<h2 class="visually-hidden">Top level navigation menu</h2>
 				<ul class="nav">
-					<li class="nav-item"><a href="/zerozoo-a.github.io/">Home</a></li>
-					<li class="nav-item"><a href="/zerozoo-a.github.io/blog/">Archive</a></li>
-					<li class="nav-item"><a href="/zerozoo-a.github.io/about/">About Me</a></li>
+					<li class="nav-item"><a href="/blog/">Home</a></li>
+					<li class="nav-item"><a href="/blog/blog/">Archive</a></li>
+					<li class="nav-item"><a href="/blog/about/">About Me</a></li>
 				</ul>
 			</nav>
 		</header>
@@ -319,7 +319,7 @@ h2 + .header-anchor {
 <!-- Stop deleting -->
 
 <h1 id="content-not-found" tabindex="-1">Content not found. <a class="header-anchor" href="#content-not-found">#</a></h1>
-<p>여긴.. 아직 올 곳이 못됩니다. <a href="/zerozoo-a.github.io/">home</a>.</p>
+<p>여긴.. 아직 올 곳이 못됩니다. <a href="/blog/">home</a>.</p>
 <!--
 
 Read more: https://www.11ty.dev/docs/quicktips/not-found/
@@ -336,6 +336,6 @@ This will work for both GitHub pages and Netlify:
 
 		<footer></footer>
 
-		<!-- Current page: /zerozoo-a.github.io/404.html -->
+		<!-- Current page: /blog/404.html -->
 	</body>
 </html>
