--- a/about/index.html
+++ b/about/index.html
@@ -297,7 +297,7 @@ h2 + .header-anchor {
 
 		<main id="skip">
 			<h1 id="about-me" tabindex="-1">About Me <a class="header-anchor" href="#about-me">#</a></h1>
-<p>I am a person that writes stuff.</p>
+<p>HELLO</p>
 
 		</main>
 
