--- a/about/index.html
+++ b/about/index.html
@@ -5,8 +5,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>log4zerozoo-a</title>
 		<meta name="description" content="not to day">
-		<link rel="alternate" href="/logs/feed/feed.xml" type="application/atom+xml" title="log4zerozoo-a">
-		<link rel="alternate" href="/logs/feed/feed.json" type="application/json" title="log4zerozoo-a">
+		<link rel="alternate" href="/feed/feed.xml" type="application/atom+xml" title="log4zerozoo-a">
+		<link rel="alternate" href="/feed/feed.json" type="application/json" title="log4zerozoo-a">
 		
 		<style>* { box-sizing: border-box; }
 /* Defaults */
@@ -284,13 +284,13 @@ h2 + .header-anchor {
 		<a href="#skip" class="visually-hidden">Skip to main content</a>
 
 		<header>
-			<a href="/logs/" class="home-link">log4zerozoo-a</a>
+			<a href="/" class="home-link">log4zerozoo-a</a>
 			<nav>
 				<h2 class="visually-hidden">Top level navigation menu</h2>
 				<ul class="nav">
-					<li class="nav-item"><a href="/logs/">Home</a></li>
-					<li class="nav-item"><a href="/logs/blog/">Archive</a></li>
-					<li class="nav-item"><a href="/logs/about/" aria-current="page">About Me</a></li>
+					<li class="nav-item"><a href="/">Home</a></li>
+					<li class="nav-item"><a href="/blog/">Archive</a></li>
+					<li class="nav-item"><a href="/about/" aria-current="page">About Me</a></li>
 				</ul>
 			</nav>
 		</header>
@@ -303,6 +303,6 @@ h2 + .header-anchor {
 
 		<footer></footer>
 
-		<!-- Current page: /logs/about/ -->
+		<!-- Current page: /about/ -->
 	</body>
 </html>
