--- a/404.html
+++ b/404.html
@@ -311,7 +311,7 @@ h2 + .header-anchor {
 				<h2 class="visually-hidden">Top level navigation menu</h2>
 				<ul class="nav">
 					<li class="nav-item"><a href="/">Home</a></li>
-					<li class="nav-item"><a href="/blog/">Archive</a></li>
+					<li class="nav-item"><a href="/blog/">logs</a></li>
 					<li class="nav-item"><a href="/about/">About Me</a></li>
 				</ul>
 			</nav>
