--- a/about/index.html
+++ b/about/index.html
@@ -293,7 +293,7 @@ h2 + .header-anchor {
 				<h2 class="visually-hidden">Top level navigation menu</h2>
 				<ul class="nav">
 					<li class="nav-item"><a href="/">Home</a></li>
-					<li class="nav-item"><a href="/blog/">Archive</a></li>
+					<li class="nav-item"><a href="/blog/">logs</a></li>
 					<li class="nav-item"><a href="/about/" aria-current="page">About Me</a></li>
 				</ul>
 			</nav>
