deploy: 02a3b70781bedf6e69f48226b60a37950075cc89

--- a/404.html
+++ b/404.html
@@ -277,6 +277,9 @@ header {
 .post-metadata time {
 	margin-right: 1em;
 }
+.pt-2 {
+	padding:2rem;
+}
 
 /* Direct Links / Markdown Headers */
 .header-anchor {
