deploy: 264e9e9435975ad350c5e68972ce9fc0403d1eed

--- a/about/index.html
+++ b/about/index.html
@@ -296,8 +296,9 @@ h2 + .header-anchor {
 				<h2 class="visually-hidden">Top level navigation menu</h2>
 				<ul class="nav">
 					<li class="nav-item"><a href="/">Home</a></li>
-					<li class="nav-item"><a href="/blog/">logs</a></li>
+					<li class="nav-item"><a href="/posts/">Posts</a></li>
 					<li class="nav-item"><a href="/about/" aria-current="page">About Me</a></li>
+					<li class="nav-item"><a href="/tags/">Tags</a></li>
 				</ul>
 			</nav>
 		</header>
