deploy: 68d064f86eeea4e422babe826f6ed0dd40c2a104

--- a/about/index.html
+++ b/about/index.html
@@ -352,7 +352,9 @@ xhr.onreadystatechange = function () {
 
 		<main id="skip">
 			<h1 id="about-me" tabindex="-1">About Me <a class="header-anchor" href="#about-me">#</a></h1>
-<p>HELLO</p>
+<p>안녕하세요</p>
+<p>의류쪽 IT 기업에서 개발자로 근무하고 있는 zerozoo-a입니다.</p>
+<p>알고리즘이나 개발 관련 글을 포스팅합니다.🐟</p>
 
 		</main>
 
