deploy: d31a9a9115c7a4af32cc2e3d5e8549c20d68d539

--- a/about/index.html
+++ b/about/index.html
@@ -39,11 +39,13 @@
 		--color-gray-90: #dad8d8;
 
 		/* --text-color is assigned to --color-gray-_ above */
-		--text-color-link: #2F81F7;
+		--text-color-link: #0a3065;
 		--text-color-link-active: #E6EDF3;
 		--text-color-link-visited: #7D8590;
 
 		--background-color: RGB(14,17,22);
+		--button: #0a306a;
+		--button-hover: #2662bb;
 	}
 }
 
@@ -301,7 +303,6 @@ h2 + .header-anchor {
 	display: flex;
     list-style: none;
     justify-content: space-between;
-    max-width: 20%;
     margin: 0 auto;
 }
 
@@ -312,45 +313,47 @@ h2 + .header-anchor {
 	margin-left: .1em;
 }
 
-/**
- * ----------------------------------------
- * animation slide-top
- * ----------------------------------------
- */
- @-webkit-keyframes slide-top {
-	0% {
-	  -webkit-transform: translateY(0);
-			  transform: translateY(0);
-	}
-	100% {
-	  -webkit-transform: translateY(-7px);
-			  transform: translateY(-7px);
-	}
-  }
-  @keyframes slide-top {
-	0% {
-	  -webkit-transform: translateY(0);
-			  transform: translateY(0);
-	}
-	100% {
-	  -webkit-transform: translateY(-7px);
-			  transform: translateY(-7px);
-	}
-  }
-
 .dodger-blue {
 	color: dodgerblue;
 }
 
-.slide-top {
-	color:#2F81F7;
-	font-size: large;
-	-webkit-animation: slide-top 0.2s cubic-bezier(0.250, 0.460, 0.450, 0.940) 500ms both;
-	        animation: slide-top 0.2s cubic-bezier(0.250, 0.460, 0.450, 0.940) 500ms both;
-}
 .a-tag {
 	text-decoration: none;
-}</style>
+}
+
+.sticky-bottom-nav {
+	position: fixed;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	background-color: var(--button);
+	color: var(--text-color-link);
+  }
+  
+  .sticky-bottom-nav ul {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	display: flex;
+  }
+  
+  .sticky-bottom-nav li {
+	margin: 0;
+	padding: 0;
+	flex-grow: 1;
+	text-align: center;
+  }
+  
+  .sticky-bottom-nav a {
+	display: block;
+	padding: 1em;
+	text-decoration: none;
+	color: inherit;
+  }
+  
+  .sticky-bottom-nav a:hover {
+	background-color: var(--button-hover);
+  }</style>
 
 		<script>
 			
