deploy: 7c0a218c4aad7a9fb6274dfb1ab29f310e2e82c9

--- a/about/index.html
+++ b/about/index.html
@@ -39,7 +39,7 @@
 		--color-gray-90: #dad8d8;
 
 		/* --text-color is assigned to --color-gray-_ above */
-		--text-color-link: #0a3065;
+		--text-color-link: #3780e7;
 		--text-color-link-active: #E6EDF3;
 		--text-color-link-visited: #7D8590;
 
@@ -313,9 +313,6 @@ h2 + .header-anchor {
 	margin-left: .1em;
 }
 
-.dodger-blue {
-	color: dodgerblue;
-}
 
 .a-tag {
 	text-decoration: none;
@@ -326,8 +323,7 @@ h2 + .header-anchor {
 	bottom: 0;
 	left: 0;
 	width: 100%;
-	background-color: var(--button);
-	color: var(--text-color-link);
+	background-color: var(--text-color-link);
   }
   
   .sticky-bottom-nav ul {
@@ -348,11 +344,11 @@ h2 + .header-anchor {
 	display: block;
 	padding: 1em;
 	text-decoration: none;
-	color: inherit;
+	color: var(--color-gray-50);
   }
   
   .sticky-bottom-nav a:hover {
-	background-color: var(--button-hover);
+	background-color: var(--text-color-link);
   }</style>
 
 		<script>
