--- a/about/index.html
+++ b/about/index.html
@@ -41,7 +41,7 @@
 		/* --text-color is assigned to --color-gray-_ above */
 		--text-color-link: #3780e7;
 		--text-color-link-active: #E6EDF3;
-		--text-color-link-visited: #7D8590;
+		--text-color-link-visited: rgb(125, 133, 144);
 
 		--background-color: RGB(14,17,22);
 		--button: #0a306a;
@@ -302,8 +302,12 @@ h2 + .header-anchor {
 .flex-list {
 	display: flex;
     list-style: none;
-    justify-content: space-between;
     margin: 0 auto;
+	margin-block-start: 0em;
+    margin-block-end: 0em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 0px;
 }
 
 .pagination-links {
@@ -318,12 +322,16 @@ h2 + .header-anchor {
 	text-decoration: none;
 }
 
+.space {
+	padding-top: 10%;
+}
+
 .sticky-bottom-nav {
 	position: fixed;
 	bottom: 0;
 	left: 0;
 	width: 100%;
-	background-color: var(--text-color-link);
+	background-color: var(--background-color);
   }
   
   .sticky-bottom-nav ul {
@@ -349,14 +357,23 @@ h2 + .header-anchor {
   
   .sticky-bottom-nav a:hover {
 	background-color: var(--text-color-link);
-  }</style>
+  }
 
-		<script>
-			
-		</script>
+
+  a.disabled {
+	pointer-events: none;
+	opacity: 0.5;
+  }
+
+  .responsive-image {
+	display: flex;
+	max-width: 100%;
+	height: auto;
+	justify-content: center;
+	margin:0 auto;
+  }</style>
 	</head>
 	<body>
-		
 		<a href="#skip" class="visually-hidden">Skip to main content</a>
 
 		<header>
@@ -374,15 +391,19 @@ h2 + .header-anchor {
 		</header>
 
 		<main id="skip">
-			<h1 id="about-me" tabindex="-1">About Me <a class="header-anchor" href="#about-me">#</a></h1>
-<p>안녕하세요</p>
-<p>의류쪽 IT 기업에서 개발자로 근무하고 있는 zerozoo-a입니다.</p>
-<p>알고리즘이나 개발 관련 글을 포스팅합니다.🐟</p>
+			# About Me
+
+
+
+안녕하세요 반갑습니다.
+
+zerozoo-a입니다. 행복하세요
+
+<script src="/js/p5.min.js"></script>
+<script src="/js/gameOfLife/index.js"></script>
+
 
 		</main>
-
 		<footer></footer>
-
-		<!-- Current page: /about/ -->
 	</body>
 </html>
