--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		/* --text-color is assigned to --color-gray-_ above */
 		--text-color-link: #3780e7;
 		--text-color-link-active: #E6EDF3;
-		--text-color-link-visited: #7D8590;
+		--text-color-link-visited: rgb(125, 133, 144);
 
 		--background-color: RGB(14,17,22);
 		--button: #0a306a;
@@ -320,8 +320,12 @@ h2 + .header-anchor {
 .flex-list {
 	display: flex;
     list-style: none;
-    justify-content: space-between;
     margin: 0 auto;
+	margin-block-start: 0em;
+    margin-block-end: 0em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 0px;
 }
 
 .pagination-links {
@@ -336,12 +340,16 @@ h2 + .header-anchor {
 	text-decoration: none;
 }
 
+.space {
+	padding-top: 10%;
+}
+
 .sticky-bottom-nav {
 	position: fixed;
 	bottom: 0;
 	left: 0;
 	width: 100%;
-	background-color: var(--text-color-link);
+	background-color: var(--background-color);
   }
   
   .sticky-bottom-nav ul {
@@ -367,14 +375,23 @@ h2 + .header-anchor {
   
   .sticky-bottom-nav a:hover {
 	background-color: var(--text-color-link);
-  }</style>
+  }
 
-		<script>
-			
-		</script>
+
+  a.disabled {
+	pointer-events: none;
+	opacity: 0.5;
+  }
+
+  .responsive-image {
+	display: flex;
+	max-width: 100%;
+	height: auto;
+	justify-content: center;
+	margin:0 auto;
+  }</style>
 	</head>
 	<body>
-		
 		<a href="#skip" class="visually-hidden">Skip to main content</a>
 
 		<header>
@@ -399,10 +416,9 @@ h2 + .header-anchor {
 
 
 
-<h1>반갑습니다..☃︎</h1>
 
 
-<div class="links-nextprev"></div>
+
 
 
 <h1>Latest 3 Posts</h1>
@@ -435,9 +451,6 @@ h2 + .header-anchor {
 
 
 		</main>
-
 		<footer></footer>
-
-		<!-- Current page: / -->
 	</body>
 </html>
