deploy: 5255080ffbb694846d89c66de42d02146c069e43

--- a/about/index.html
+++ b/about/index.html
@@ -92,6 +92,9 @@ li {
 	line-height: 1.5;
 }
 
+a {
+	text-decoration: none;
+}
 a[href] {
 	color: var(--text-color-link);
 }
@@ -371,7 +374,36 @@ h2 + .header-anchor {
 	height: auto;
 	justify-content: center;
 	margin:0 auto;
-  }</style>
+  }
+
+
+
+/* pagination */
+.wrapper ul{
+	display: flex;
+	padding: 8px;
+}
+.wrapper ul a {
+	text-decoration: none;
+}
+.wrapper ul li{
+	list-style-type: none;
+	line-height: 55px;
+	text-align: center;
+	font-size: 18px;
+	font-weight: 600;
+	cursor: pointer;
+	margin: 10px;
+	border-radius: 50px;
+	padding: 10px;
+}
+.wrapper ul li.btn{
+	line-height: 60px;
+	font-size: 22px;
+}
+.wrapper ul li.active{
+	color: var(--text-color-link);
+}</style>
 	</head>
 	<body>
 		<a href="#skip" class="visually-hidden">Skip to main content</a>
