--- a/about/index.html
+++ b/about/index.html
@@ -215,9 +215,12 @@ header {
 	list-style: none;
 	padding: 0;
 	padding-left: 1.5rem;
+	overflow: hidden;
+	
 }
 .postlist-item {
 	display: flex;
+	text-overflow: ellipsis;
 	flex-wrap: wrap;
 	align-items: baseline;
 	counter-increment: start-from -1;
@@ -345,31 +348,6 @@ h2 + .header-anchor {
 	background-color: var(--background-color);
   }
   
-  .sticky-bottom-nav ul {
-	list-style: none;
-	margin: 0;
-	padding: 0;
-	display: flex;
-  }
-  
-  .sticky-bottom-nav li {
-	margin: 0;
-	padding: 0;
-	flex-grow: 1;
-	text-align: center;
-  }
-  
-  .sticky-bottom-nav a {
-	display: block;
-	padding: 1em;
-	text-decoration: none;
-	color: var(--color-gray-50);
-  }
-  
-  .sticky-bottom-nav a:hover {
-	background-color: var(--text-color-link);
-  }
-
 
   a.disabled {
 	pointer-events: none;
@@ -413,6 +391,15 @@ h2 + .header-anchor {
 .wrapper ul a li.active{
 	color: var(--text-color);
 	background-color: #32323a;
+}
+
+.post-cover {
+	position: relative;
+	padding: 0;
+	margin: 0;
+	max-height: 500px;
+	background-color: #fafafa;
+	overflow: hidden;
 }</style>
 	</head>
 	<body>
