--- a/404.html
+++ b/404.html
@@ -947,6 +947,28 @@ h2 + .header-anchor {
 	width: 92px;
 	height: 92px;
 	border-radius:8px;
+}
+.flex-center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.about-img {
+	object-fit: cover;
+	width: 192px;
+	height: 192px;
+	border-radius:8px;
+}
+
+.contact .contact-title {
+    position: relative;
+	font-size: 0.8125em; /* 13px /16 */
+	color: var(--color-gray-90);
+    font-weight: 400;
+    font-size: 12px;
+    margin: 0 0 5px;
+    text-transform: uppercase;
+    text-align: center;
 }</style>
 	</head>
 	<body>
@@ -957,11 +979,11 @@ h2 + .header-anchor {
 			<nav>
 				<h2 class="visually-hidden">Top level navigation menu</h2>
 				<ul class="nav">
-					<li class="nav-item"><a href="/posts/">Home</a></li>
 					<li class="nav-item"><a href="/tags/">Tags</a></li>
 					<li class="nav-item"><a href="/about/">About Me</a></li>
 				</ul>
 			</nav>
+
 			<div id="event_result"></div>
 		</header>
 
