deploy: 1f22c672d6bc6b08665abb5fc4da9d2263ad6381

--- a/page4/index.html
+++ b/page4/index.html
@@ -634,6 +634,7 @@ a[href]:active {
 	color: var(--text-color-link-active);
 }
 
+
 main {
 	padding: 1rem;
 }
@@ -996,6 +997,14 @@ blockquote {
     margin-top: var(--base-size-24, 24px) !important;
     margin-bottom: var(--base-size-24, 24px) !important;
     color: var(--color-ansi-white-bright);
+}
+
+.numb {
+    color: var(--color-btn-text);
+}
+.active {
+    background-color: var(--color-btn-outline-selected-bg);
+
 }</style>
 	</head>
 	<body>
@@ -1027,6 +1036,7 @@ blockquote {
 
 <div>
   <ol style="counter-reset: start-from 15" >
+    <li>
     
         <a href="/blog/CS/ALGORITHMS/SEARCH/findMaxDivideAndConquer/">
         <div class="p-3 d-flex color-bg-default Box m-3">
@@ -1104,6 +1114,7 @@ blockquote {
         </a>
     
     </ol>
+    </li>
 </div>
 <div class="wrapper">
   <ul id="pagination" class="sticky-bottom-nav"></ul>
@@ -1131,11 +1142,20 @@ blockquote {
 
   if (page > 0) {
     li += `
-    <a href="${pageLinks[page-1]}">
+    <li class="btn" onclick="elem(allPages, ${
+      0
+    })" >
+    <a href="${pageLinks.at(0)}">
+      <span> << </span>
+    </a>
+    </li>
     <li class="btn" onclick="elem(allPages, ${
       page - 1
-    })" > < </li>
+    })" >
+    <a href="${pageLinks[page - 2] ?? pageLinks[page-1]}">
+      <span> < </span>
     </a>
+    </li>
     `;
     spaceStack.push(1)
   } else {
@@ -1164,11 +1184,13 @@ blockquote {
     */
     if(page == allPages - 1) {
     li += `
-      <a href="${pageLinks[currentPage]}">
-      <li class="numb active" onclick="elem(allPages, ${currentPage})"><span>
-      ${afterPages}
-      </span></li>
-      </a>
+    <li class="numb active" onclick="elem(allPages, ${currentPage})">
+        <a href="${pageLinks[currentPage]}">
+         <span>
+          ${afterPages}
+         </span>
+        </a>
+      </li>
       `;
       spaceStack.push(1)
       break;
@@ -1177,33 +1199,48 @@ blockquote {
      * 첫 페이지의 pagination
      */
     li += `
+    <li class="numb ${liActive}" onclick="elem(allPages, ${currentPage})" >
       <a href="${pageLinks[currentPage]}">
-      <li class="numb ${liActive}" onclick="elem(allPages, ${currentPage})" ><span>
-      ${currentPage + 1}
-      </span></li>
+      <span>
+        ${currentPage + 1}
+      </span>
       </a>
+      </li>
       `;
     spaceStack.push(1)
   }
 
   if(page == 0) {
     li += `
+    <li class="numb" onclick="elem(allPages, ${afterPages + 1})">
       <a href="${pageLinks[afterPages + 1]}">
-      <li class="numb" onclick="elem(allPages, ${afterPages + 1})" ><span>
+      <span>
         ${afterPages + 2}
-      </span></li>
+      </span>
       </a>
+    </li>
       `;
     spaceStack.push(1)
   }
 
   if (page < allPages && page !== allPages - 1) {
     li += `
-    <a href="${pageLinks[afterPages]}">
-      <li class="btn" onclick="elem(allPages, ${
+    <li class="btn" onclick="elem(allPages, ${
         page + 1
-      })" > > </li>
-    </a>
+      })" >
+      <a href="${pageLinks[afterPages + 2] ?? pageLinks[afterPages + 1]}">
+        <span> > </span>
+      </a>
+    </li>
+    `;
+    li += `
+    <li class="btn" onclick="elem(allPages, ${
+      allPages
+      })" >
+      <a href="${pageLinks.at(-1)}">
+        <span> >> </span>
+      </a>
+    </li>
     `;
     spaceStack.push(1)
   } else {
