--- a/about/index.html
+++ b/about/index.html
@@ -616,6 +616,7 @@ a[href]:active {
 	color: var(--text-color-link-active);
 }
 
+
 main {
 	padding: 1rem;
 }
@@ -978,6 +979,14 @@ blockquote {
     margin-top: var(--base-size-24, 24px) !important;
     margin-bottom: var(--base-size-24, 24px) !important;
     color: var(--color-ansi-white-bright);
+}
+
+.numb {
+    color: var(--color-btn-text);
+}
+.active {
+    background-color: var(--color-btn-outline-selected-bg);
+
 }</style>
 	</head>
 	<body>
