--- a/about/index.html
+++ b/about/index.html
@@ -19,8 +19,8 @@
     	<meta name="naver-site-verification" content="6cf39493d46e888e46dfc3a608270980215dbca5" />
 		
 		<style>* { box-sizing: border-box; }
-/* reset */
-ol, ul, li
+reset
+/* ol, ul, li
 {
 	margin: 0;
 	padding: 0;
@@ -28,7 +28,7 @@ ol, ul, li
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
-}
+} */
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
@@ -39,6 +39,12 @@ body {
 }
 ol, ul {
 	list-style: none;
+}
+.post-content > ol, .post-content > ul {
+	list-style: inside;
+}
+.post-content > ol > li > *, .post-content > ul > li > * {
+    display: inline;
 }
 /* Defaults */
 :root {
@@ -873,17 +879,16 @@ h2 + .header-anchor {
 
 
 /* pagination */
-.wrapper ul{
+.wrapper > ul {
 	display: flex;
 	padding: 8px;
 	justify-content: center;
 	align-items: center;
 }
-.wrapper ul a {
+.wrapper > ul a {
 	text-decoration: none;
 }
-.wrapper ul li{
-	list-style-type: none;
+.wrapper > ul li{
 	text-align: center;
 	font-size: 18px;
 	font-weight: 600;
