--- a/about/index.html
+++ b/about/index.html
@@ -948,9 +948,7 @@ h2 + .header-anchor {
 	flex-direction: column;
 }
 .cover-img {
-	object-fit: cover;
-	/* width: 92px;
-	height: 92px; */
+	object-fit: contain;
 	border-radius:8px;
 }
 .flex-center {
@@ -1060,8 +1058,8 @@ blockquote {
   </section>
 </div>
 
-<script src="/js/p5.min.js"></script>
-<script src="/js/gameOfLife/index.js"></script>
+<script async src="/js/p5.min.js"></script>
+<script async src="/js/gameOfLife/index.js"></script>
 
 
 		</main>
