--- a/about/index.html
+++ b/about/index.html
@@ -1012,6 +1012,9 @@ blockquote {
 .post-title {
     overflow: hidden;
     text-overflow: ellipsis;
+}
+.katex-html {
+    display: none;
 }</style>
 	</head>
 	<body>
