deploy: 7789629aabf63b538e8a1fb630c0e4936c0f3a2e

--- a/about/index.html
+++ b/about/index.html
@@ -19,7 +19,6 @@
     	<meta name="naver-site-verification" content="6cf39493d46e888e46dfc3a608270980215dbca5" />
 		
 		<style>* { box-sizing: border-box; }
-reset
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
@@ -31,12 +30,12 @@ body {
 ol, ul {
 	list-style: none;
 }
-.post-content > ol, .post-content > ul {
+/* .post-content > ol, .post-content > ul {
 	list-style: inside;
-}
-.post-content > ol > li > *, .post-content > ul > li > * {
+} */
+/* .post-content > ol > li > *, .post-content > ul > li > * {
     display: inline;
-}
+} */
 /* Defaults */
 :root {
 	--font-family: -apple-system, system-ui, sans-serif;
@@ -76,7 +75,16 @@ ol, ul {
 	--text-color-link: #082840;
 	--text-color-link-active: #5f2b48;
 	--text-color-link-visited: #17050F;
-
+    --adaptiveGrey50: #f9fafb;
+    --adaptiveGrey100: #f2f4f6;
+    --adaptiveGrey200: #e5e8eb;
+    --adaptiveGrey300: #d1d6db;
+    --adaptiveGrey400: #b0b8c1;
+    --adaptiveGrey500: #8b95a1;
+    --adaptiveGrey600: #6b7684;
+    --adaptiveGrey700: #4e5968;
+    --adaptiveGrey800: #333d4b;
+    --adaptiveGrey900: #191f28;
 	--syntax-tab-size: 2;
 	--color-canvas-default-transparent: rgba(13,17,23,0);
     --color-page-header-bg: #0d1117;
@@ -948,6 +956,7 @@ h2 + .header-anchor {
 }
 .cover-img {
 	border-radius:8px;
+    aspect-ratio: 1 / 1;
 }
 .flex-center {
     display: flex;
@@ -972,18 +981,6 @@ h2 + .header-anchor {
     text-align: center;
 }
 
-blockquote {
-    background-color: var(--color-checks-ansi-blue);
-    border-color: var(--color-border-default);
-    border-radius: var(--borderRadius-medium, 6px);
-    border-style: solid;
-    border-width: var(--borderWidth-thin, 1px);
-    box-shadow: var(--color-shadow-medium) !important;
-    padding: var(--base-size-16, 16px) !important;
-    margin-top: var(--base-size-24, 24px) !important;
-    margin-bottom: var(--base-size-24, 24px) !important;
-    color: var(--color-ansi-white-bright);
-}
 
 .numb {
     color: var(--color-btn-text);
