deploy: aad91f3adc66d24b7574092b4f8897afe15e80be

--- a/about/index.html
+++ b/about/index.html
@@ -957,6 +957,8 @@ h2 + .header-anchor {
 .cover-img {
 	border-radius:8px;
     aspect-ratio: 1 / 1;
+    width: 78px;
+    height: 78px;
 }
 .flex-center {
     display: flex;
