--- a/about/index.html
+++ b/about/index.html
@@ -40,6 +40,7 @@ ol, ul {
 :root {
 	--font-family: -apple-system, system-ui, sans-serif;
 	--font-family-monospace: Consolas, Menlo, Monaco, Andale Mono WT, Andale Mono, Lucida Console, Lucida Sans Typewriter, DejaVu Sans Mono, Bitstream Vera Sans Mono, Liberation Mono, Nimbus Mono L, Courier New, Courier, monospace;
+    --img-max-width: 607px;
 }
 
 /* Theme colors */
@@ -793,6 +794,12 @@ header {
 .post-content {
 	font-size: large;
 }
+.post-content > img {
+    max-width: var(--img-max-width);
+    border-style: none;
+    box-sizing: content-box;
+    background-color: #0d1117;
+}
 .post-metadata time {
 	margin-right: 1em;
 }
@@ -985,11 +992,21 @@ h2 + .header-anchor {
 
 
 .numb {
-    color: var(--color-btn-text);
+    padding:10px;
+    margin:5px;
 }
+.btn {
+    padding:10px;
+    margin:5px;
+}
+
 .active {
     background-color: var(--color-btn-outline-selected-bg);
-
+    color: var(--adaptiveGrey100)!important;
+    border-radius: 8px;
+}
+.border-radius10 {
+    border-radius: 10px;
 }
 
 .posts-container > ol, .posts-container > ul, .posts-container > li{
