--- a/about/index.html
+++ b/about/index.html
@@ -630,9 +630,6 @@ main :first-child {
 	margin-top: 0;
 }
 
-header {
-	border-bottom: 1px dashed var(--color-gray-20);
-}
 header:after {
 	content: "";
 	display: table;
@@ -967,6 +964,15 @@ h2 + .header-anchor {
     width: 78px;
     height: 78px;
 }
+
+.big-cover-img {
+	border-radius: 12px;
+    aspect-ratio: 1 / 1;
+    width: 544px;
+    max-width: 544px;
+    max-height: 262px;
+}
+
 .flex-center {
     display: flex;
     justify-content: center;
