deploy: effdfe2af7084e97753707cf2ff57c105644801b

--- a/about/index.html
+++ b/about/index.html
@@ -966,11 +966,12 @@ h2 + .header-anchor {
 }
 
 .big-cover-img {
-	border-radius: 12px;
-    aspect-ratio: 1 / 1;
-    width: 544px;
+    border-radius: 12px;
+    aspect-ratio: 544/262;
+    width: 100%;
     max-width: 544px;
     max-height: 262px;
+    object-fit: cover;
 }
 
 .flex-center {
