deploy: 5623fefc5054e0b62b7bb201461aea7a142f08d8

--- a/about/index.html
+++ b/about/index.html
@@ -921,7 +921,7 @@ h2 + .header-anchor {
 	display: flex;
 }
 .p-3 {
-    padding: var(--base-size-16, 16px) !important;
+    padding: var(--base-size-8, 8px) !important;
 }
 .pl-3 {
     padding-left: var(--base-size-16, 16px) !important;
@@ -936,7 +936,8 @@ h2 + .header-anchor {
     padding-right: var(--base-size-16, 16px) !important;
 }
 .m-3 {
-    margin: var(--base-size-16, 16px) !important;
+    /* margin: var(--base-size-16, 16px) !important; */
+    margin: 16px 0;
 }
 .d-flex {
     display: flex !important;
@@ -1030,7 +1031,6 @@ h2 + .header-anchor {
 }
 .post-title-container {
     min-width: 128px;
-    white-space: nowrap;
 }
 .post-title {
     overflow: hidden;
