deploy: f43698584351b7f6a28bc5053667aed83cb13d8b

--- a/about/index.html
+++ b/about/index.html
@@ -1087,7 +1087,7 @@ h2 + .header-anchor {
 }
 
 #openDrawerBtn {
-    position: sticky;
+    position: inherit;
     top: 20px;
     cursor: pointer;
     background-color: #24292e;
@@ -1142,6 +1142,9 @@ h2 + .header-anchor {
 				
 				<div id="drawerMenu">
 					<ul>
+						<li>Categories</li>
+						<li><a href="/">home</a></li>
+						<li><a href="/about">about</a></li>
 							<li>
 									<details>
 										<summary>CS</summary>
@@ -1358,6 +1361,11 @@ h2 + .header-anchor {
 												<li>
 													<a href=/blog/JS/about-reduce>
 														about-reduce
+													</a>
+												</li>
+												<li>
+													<a href=/blog/JS/contains>
+														contains
 													</a>
 												</li>
 												<li>
